--- a/package.json
+++ b/package.json
@@ -1,58 +1,65 @@
 {
-  "name": "oktacuts",
-  "version": "1.0",
-  "description": "A URL shortener with Okta superpowers. Not affiliated with Okta.",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/timfeeley-okta/oktacuts.git"
-  },
-  "scripts": {
-    "build": "node utils/build.js",
-    "start": "node utils/webserver.js"
-  },
   "dependencies": {
-    "@hot-loader/react-dom": "^17.0.1",
-    "@types/chrome": "0.0.154",
-    "@types/react": "^17.0.17",
-    "@types/react-dom": "^17.0.9",
-    "evergreen-ui": "^6.4.0",
+    "@heroicons/react": "^1.0.3",
+    "@reduxjs/toolkit": "^1.6.1",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0",
-    "react-is": "^17.0.2"
+    "react-redux": "^7.2.4",
+    "react-table": "^7.7.0",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
+    "@types/chrome": "0.0.154",
+    "@types/node": "^16.6.1",
+    "@types/react": "^17.0.17",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-table": "^7.7.2",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "babel-preset-react-app": "^10.0.0",
+    "autoprefixer": "^10.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^10.0.0",
-    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "postcss": "^8.3.6",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
-    "source-map-loader": "^3.0.0",
     "style-loader": "^3.2.1",
-    "terser-webpack-plugin": "^5.1.4",
+    "tailwindcss": "^2.2.7",
     "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.3.5",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-merge": "^5.8.0"
+  },
+  "name": "ok2",
+  "scripts": {
+    "build": "NODE_ENV=production webpack --config webpack.prod.js",
+    "start": "webpack --hot --watch --config webpack.dev.js"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
