--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@heroicons/react": "^1.0.3",
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.4",
     "@reduxjs/toolkit": "^1.6.1",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
@@ -12,14 +13,14 @@
   },
   "devDependencies": {
     "@types/chrome": "0.0.154",
-    "@types/node": "^16.6.1",
-    "@types/react": "^17.0.17",
+    "@types/node": "^16.6.2",
+    "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-table": "^7.7.2",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
     "autoprefixer": "^10.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^9.0.1",
@@ -38,13 +39,14 @@
     "style-loader": "^3.2.1",
     "tailwindcss": "^2.2.7",
     "ts-loader": "^9.2.5",
-    "ts-node": "^10.2.0",
+    "ts-node": "^10.2.1",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.3.5",
     "webpack": "^5.50.0",
-    "webpack-cli": "^4.7.2",
+    "webpack-cli": "^4.8.0",
     "webpack-merge": "^5.8.0"
   },
+  "license": "MIT",
   "name": "ok2",
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
