--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "@types/chrome": "0.0.154",
     "@types/node": "^16.6.2",
     "@types/react": "^17.0.18",
