--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,12 +38,16 @@
         "plugin:react/recommended",
         "plugin:react-hooks/recommended",
         "plugin:@typescript-eslint/recommended",
+        "baseui",
         "prettier"
       ],
       "globals": {
         "chrome": "readonly"
       },
       "rules": {
+        "baseui/deprecated-theme-api": "warn",
+        "baseui/deprecated-component-api": "warn",
+        "baseui/no-deep-imports": "warn",
         "react/prop-types": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
