--- a/package.json
+++ b/package.json
@@ -1,49 +1,48 @@
 {
   "dependencies": {
-    "@headlessui/react": "^1.4.0",
-    "@heroicons/react": "^1.0.4",
     "@reduxjs/toolkit": "^1.6.1",
-    "classnames": "^2.3.1",
+    "baseui": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "@dcwither/react-editable": "^0.3.1",
     "react-redux": "^7.2.4",
     "react-table": "^7.7.0",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styletron-engine-atomic": "^1.4.8",
+    "styletron-react": "^6.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.3.3",
     "@types/chrome": "0.0.154",
     "@types/node": "^16.6.2",
-    "@types/react": "^17.0.18",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-table": "^7.7.2",
+    "@types/styletron-engine-atomic": "^1.1.1",
+    "@types/styletron-react": "^5.0.3",
+    "@types/styletron-standard": "^2.0.2",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
-    "autoprefixer": "^10.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-baseui": "^10.0.0",
+    "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "postcss": "^8.3.6",
-    "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
     "style-loader": "^3.2.1",
-    "tailwindcss": "^2.2.7",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.1",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.3.5",
-    "webpack": "^5.50.0",
+    "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-merge": "^5.8.0"
   },
