--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -4,26 +4,9 @@
     "default_popup": "popup.html"
   },
   "author": "Tim Feeley <tim.feeley@okta.com>",
-  "content_scripts": [
-    {
-      "js": [
-        "content_script.js"
-      ],
-      "matches": [
-        "http://*/*",
-        "https://*/*",
-        "<all_urls>"
-      ]
-    }
-  ],
-  "content_security_policy": {
-    "extension_pages": "script-src 'self' http://localhost:8097/; object-src 'self'"
-  },
   "homepage_url": "https://github.com/timfeeley-okta/oktacuts",
   "host_permissions": [
     "<all_urls>",
-    "http://localhost:8097/*",
-    "file://*",
     "*://*/*"
   ],
   "icons": {
@@ -39,15 +22,5 @@
     "activeTab"
   ],
   "short_name": "Oktacuts",
-  "version": "1.0.0",
-  "web_accessible_resources": [
-    {
-      "matches": [],
-      "resources": [
-        "icon-128.png",
-        "icon-48.png",
-        "icon-16.png"
-      ]
-    }
-  ]
+  "version": "1.0.0"
 }
