--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "@dcwither/react-editable": "^0.3.1",
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.4",
     "@reduxjs/toolkit": "^1.6.1",
     "baseui": "^10.1.0",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -13,6 +16,7 @@
     "styletron-react": "^6.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "@types/chrome": "0.0.154",
     "@types/node": "^16.7.1",
     "@types/react": "^17.0.19",
@@ -23,8 +27,9 @@
     "@types/styletron-standard": "^2.0.2",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "autoprefixer": "^10.3.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
@@ -36,8 +41,12 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "postcss": "^8.3.6",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
     "style-loader": "^3.2.1",
+    "tailwindcss": "^2.2.7",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.1",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
