--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -4,10 +4,12 @@
     "default_popup": "popup.html"
   },
   "author": "Tim Feeley <tim.feeley@okta.com>",
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' http://localhost:8097/; object-src 'self'"
+  },
   "homepage_url": "https://github.com/timfeeley-okta/oktacuts",
   "host_permissions": [
-    "<all_urls>",
-    "*://*/*"
+    "<all_urls>"
   ],
   "icons": {
     "16": "icon-16.png",
@@ -19,7 +21,8 @@
   "name": "Oktacuts URL shortener",
   "permissions": [
     "declarativeNetRequest",
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "short_name": "Oktacuts",
   "version": "1.0.0"
