--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
     "@reduxjs/toolkit": "^1.6.1",
-    "baseui": "^10.1.0",
+    "@tailwindcss/typography": "^0.4.1",
     "classnames": "^2.3.1",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.13.0",
     "react-redux": "^7.2.4",
     "react-table": "^7.7.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
-    "styletron-engine-atomic": "^1.4.8",
-    "styletron-react": "^6.0.1"
+    "whatwg-fetch": "3.6.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.3.3",
@@ -22,9 +23,6 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-table": "^7.7.2",
-    "@types/styletron-engine-atomic": "^1.1.1",
-    "@types/styletron-react": "^5.0.3",
-    "@types/styletron-standard": "^2.0.2",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
@@ -35,8 +33,7 @@
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-baseui": "^10.1.0",
-    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -45,6 +42,7 @@
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
+    "source-map-loader": "^3.0.0",
     "style-loader": "^3.2.1",
     "tailwindcss": "^2.2.7",
     "ts-loader": "^9.2.5",
@@ -53,13 +51,14 @@
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0",
     "webpack-merge": "^5.8.0"
   },
   "license": "MIT",
   "name": "ok2",
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
-    "start": "webpack --hot --watch --config webpack.dev.js"
+    "start": "webpack serve --config webpack.dev.js"
   },
   "browserslist": {
     "production": [
